--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/clavance/giggle#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "crypto-random-string": "^3.2.0",
     "express": "^4.17.1",
     "path": "^0.12.7",
     "request": "^2.88.2"
