--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/clavance/giggle#readme",
   "dependencies": {
+    "base-64": "^0.1.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto-random-string": "^3.2.0",
