--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "crypto-random-string": "^3.2.0",
     "express": "^4.17.1",
     "path": "^0.12.7",
+    "redis": "^3.0.2",
     "request": "^2.88.2"
   }
 }
